@@ -502,6 +502,10 @@ sub _getManifacturerFromCode {
     "APP" => "Apple Computer, Inc.",
     "ART" => "ArtMedia",
     "AST" => "AST Research",
+    "AMW" => "AMW",
+    "BMM" => "BMM",
+    "BNQ" => "BenQ Corporation",
+    "BOE" => "BOE Display Technology",
     "CPL" => "Compal Electronics, Inc. / ALFA",
     "CPQ" => "COMPAQ Computer Corp.",
     "CPT" => "Chunghwa Picture Tubes, Ltd.",
@@ -520,19 +524,23 @@ sub _getManifacturerFromCode {
     "GSM" => "LG Electronics Inc. (GoldStar Technology, Inc.)",
     "GWY" => "Gateway 2000",
     "HEI" => "Hyundai Electronics Industries Co., Ltd.",
+    "HIQ" => "Hyundai ImageQuest",
     "HIT" => "Hitachi",
-    "HSD" => "Hanns.G",
+    "HSD" => "Hannspree Inc",
     "HSL" => "Hansol Electronics",
     "HTC" => "Hitachi Ltd. / Nissei Sangyo America Ltd.",
     "HWP" => "Hewlett Packard",
     "IBM" => "IBM PC Company",
     "ICL" => "Fujitsu ICL",
+    "IFS" => "InFocus",
+    "IQT" => "Hyundai",
     "IVM" => "Idek Iiyama North America, Inc.",
     "KFC" => "KFC Computek",
     "LEN" => "Lenovo",
     "LGD" => "LG Display",
     "LKM" => "ADLAS / AZALEA",
     "LNK" => "LINK Technologies, Inc.",
+    "LPL" => "LG Philips",
     "LTN" => "Lite-On",
     "MAG" => "MAG InnoVision",
     "MAX" => "Maxdata Computer GmbH",
@@ -547,8 +555,11 @@ sub _getManifacturerFromCode {
     "NOK" => "Nokia",
     "OQI" => "OPTIQUEST",
     "PBN" => "Packard Bell",
+    "PCK" => "Daewoo",
+    "PDC" => "Polaroid"
     "PGS" => "Princeton Graphic Systems",
     "PHL" => "Philips Consumer Electronics Co.",
+    "PRT" => "Princeton",
     "REL" => "Relisys",
     "SAM" => "Samsung",
     "SMI" => "Smile",
